<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.arondillqs5328.testandroidstudio.Main2Activity">

    <TextView
        android:id="@+id/last_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_value"/>

    <TextView
        android:id="@+id/last_max_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_value"
        android:paddingBottom="10dp"
        android:text="@string/last_max_value"/>

    <TextView
        android:id="@+id/new__text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_max_value"
        android:text="@string/new_text_value"/>
    <TextView
        android:id="@+id/new_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new__text_value"
        android:paddingTop="10dp"
        android:text="@string/new_value"/>

</RelativeLayout>
