<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.arondillqs5328.testandroidstudio.Main1Activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/trapeze" />

    <EditText
        android:id="@+id/enter_param_a_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:digits="0123456789."
        android:hint="@string/param_a_res" />

    <EditText
        android:id="@+id/enter_param_b_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_param_a_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:digits="0123456789."
        android:hint="@string/param_b_res" />

    <EditText
        android:id="@+id/enter_param_c_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_param_b_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:digits="0123456789."
        android:hint="@string/param_c_res" />

    <EditText
        android:id="@+id/enter_param_d_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_param_c_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:digits="0123456789."
        android:hint="@string/param_d_res" />

    <Button
        android:id="@+id/run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_param_d_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="runCalculation"
        android:text="@string/run_btn_res"/>

</RelativeLayout>
